force-app/main/default/objects/sf_devops__Test_Provider__c/sf_devops__Test_Provider__c.object-meta.xml
<CustomObject>
    <label>Test Provider</label>
    <nameField>
        <label>Test Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>