force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Icon_Url__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Icon_Url__c</fullName>
    <description>Url of the Test Provider icon. This url will download the icon image of the test provider</description>
    <label>Icon_Url</label>
    <type>Url</type>
</CustomField>