force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Implementer_Class__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Implementer_Class__c</fullName>
    <description>The name of the global class (fully qualified class name) which implements the TestProvider global interface</description>
    <label>Implementer_Class</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>