force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Last_Sync_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Sync_End_Time__c</fullName>
    <label>Last Sync End Time</label>
    <type>DateTime</type>
</CustomField>