force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Learn_More__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Learn_More__c</fullName>
    <inlineHelpText>Link to test provider documentation</inlineHelpText>
    <label>Learn More</label>
    <type>Url</type>
</CustomField>