force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Setup_Page__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Setup_Page__c</fullName>
    <description>The lightning page name which handles the setup experience of this Test Provider</description>
    <label>Setup_Page</label>
    <length>60</length>
    <type>Text</type>
</CustomField>