force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Not Configured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>