force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Test_Provider_URL__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider_URL__c</fullName>
    <label>Test Provider URL</label>
    <type>Url</type>
</CustomField>