force-app/main/default/objects/sf_devops__Test_Provider__c/fields/sf_devops__Test_Suite_Creation_Page__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Suite_Creation_Page__c</fullName>
    <description>Stores the name of the lightning tab which has the test suite creation experience for this test provider</description>
    <label>Test Suite Creation Page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>