force-app/main/default/objects/sf_devops__Test_Provider__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Last_Sync_Start_Time__c</columns>
    <columns>sf_devops__Last_Sync_End_Time__c</columns>
    <columns>sf_devops__Last_Sync_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>